<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WeMusic</string>
    <string name="one">Tab One</string>
    <string name="two">Tab Two</string>
    <string name="three">Tab Three</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- The text displayed at home screen. Example: Hottest Songs, Pop..-->
    <string name="Songs"><xliff:g example="Hottest Songs" id="songs">%s</xliff:g></string>

    <string name="facebook_app_id">1750641754978423</string>
    <string name="fb_login_protocol_scheme">fb1750641754978423</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="fragment_one">ONLINE</string>
    <string name="fragment_two">TWO</string>
    <string name="fragment_three">THREE</string>
    <string name="upload">Upload</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="tiengviet">Tieng Viet</string>
    <string name="english">English</string>
    <string name="about">About</string>
    <string-array name="language_array">
        <item>Languege</item>
        <item>English</item>
        <item>Tieng Viet</item>
        <item>Thailand</item>
        <item>Lao</item>
        <item>Campuchia</item>
        <item>Japan</item>
        <item>Czech</item>
        <item>China</item>
    </string-array>
    <string name="aboutabout">Online Music Player made by team 19 :D</string>

    <!-- fragment playback-->
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_pause">play or pause</string>


    <!-- activity full screen-->
    <string name="background_image_str">Background image for album art</string>
    <string name="skip_prev">skip to previous</string>
    <string name="skip_next">skip to next</string>

</resources>
