<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learnandroid.huynh.music_app.settingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/settingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/textColorPrimary"
            android:textSize="27dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/languageTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingTop="13dp"
            android:text="@string/language"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/aboutTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingTop="13dp"
            android:text="@string/about"
            android:textSize="25dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
